<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="lock_state">Lock State</string>
    <string name="lock_remote_unlock">Remote Unlock</string>
    <string name="lock_request_picture_video">Request Picture And Video</string>
    <string name="lock_request_latest_picture">Request Latest Picture</string>
    <string name="lock_unlock">Unlock</string>
    <string name="lock_refuse_unlock">Refuse Unlock</string>
    <string name="lock_remote_request_unlock">Remote Request Unlock</string>
    <string name="lock_snapshot">Snapshot</string>
    <string name="lock_recorder">Recorder</string>
    <string name="lock_video_talk">Talk</string>
    <string name="lock_mute">Mute</string>
    <string name="lock_force_anti_lock">Force Anti-lock</string>
    <string name="lock_retake_photo">Retake Photo</string>
    <string name="lock_ignore">Ignore</string>
    <string name="lock_lock_panel">Lock Control Panel</string>
    <string name="lock_video_show">Lock Video And Audio Ability Show Demo</string>
    <string name="lock_try_to_trigger_doorbell">Tips:Try to trigger the doorbell in this page</string>
    <string name="lock_log_function">Log Function</string>
    <string name="lock_temp_password">Temp Password</string>
    <string name="lock_member_manage">Member Management</string>
    <string name="lock_other_function">Other Function</string>
    <string name="lock_get_a_latest_log">Get a Latest Log</string>
    <string name="lock_get_logs_list">Get Logs List</string>
    <string name="lock_video_funtion">Picture AND Video Function</string>
    <string name="lock_bind_to_user">Bind to User</string>
    <string name="lock_query_audio_setting">Query Audio Setting</string>
    <string name="lock_set_audio_pwd">Set Audio Password</string>
    <string name="lock_add_member">Add Member</string>
    <string name="lock_update_member">Update Member</string>
    <string name="lock_delete_member">Delete Member</string>
    <string name="lock_member_detail">Member Detail</string>
    <string name="lock_member_list">Member List</string>
    <string name="lock_create_online_pwd">Create Online Temp Password</string>
    <string name="lock_update_online_pwd">Update Online Temp Password</string>
    <string name="lock_update_online_pwd_name">Update Online Temp Password Name</string>
    <string name="lock_delete_online_pwd">Delete Online Temp Password</string>
    <string name="lock_get_online_pwd_list">Get Online Temp Password List</string>
    <string name="lock_get_offline_pwd">Get Offline Password</string>
    <string name="lock_get_offline_pwd_list">Get Offline Password List</string>
    <string name="lock_set_offline_pwd_name">Set Offline Password Name</string>
    <string name="lock_clear_code">Get Clear Code</string>
    <string name="lock_get_no_limit_pwd">Get No Limit Offline Password</string>
</resources>