<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".videolock.TempPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_create_online_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/button_bg_shape"
                android:text="@string/lock_create_online_pwd"
                android:textSize="@dimen/ts_20"
                android:layout_marginTop="@dimen/ts_20"
                />
            <Button
                android:id="@+id/btn_set_online_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/button_bg_shape"
                android:text="@string/lock_update_online_pwd_name"
                android:textSize="@dimen/ts_20"
                android:layout_marginTop="@dimen/ts_20"
                />
            <Button
                android:id="@+id/btn_set_online_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/button_bg_shape"
                android:text="@string/lock_update_online_pwd"
                android:textSize="@dimen/ts_20"
                android:layout_marginTop="@dimen/ts_20"
                />

            <Button
                android:id="@+id/btn_delete_online_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/button_bg_shape"
                android:text="@string/lock_delete_online_pwd"
                android:textSize="@dimen/ts_20"
                android:layout_marginTop="@dimen/ts_20"
                />
            <Button
                android:id="@+id/btn_get_online_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/button_bg_shape"
                android:text="@string/lock_get_online_pwd_list"
                android:textSize="@dimen/ts_20"
                android:layout_marginTop="@dimen/ts_20"
                />


            <Button
                android:id="@+id/btn_offline_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/button_bg_shape"
                android:text="@string/lock_get_offline_pwd"
                android:textSize="@dimen/ts_20"
                android:layout_marginTop="@dimen/dp_50"
                />
            <Button
                android:id="@+id/btn_get_offline_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/button_bg_shape"
                android:text="@string/lock_get_offline_pwd_list"
                android:textSize="@dimen/ts_20"
                android:layout_marginTop="@dimen/ts_20"
                />
            <Button
                android:id="@+id/btn_set_offline_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/button_bg_shape"
                android:text="@string/lock_set_offline_pwd_name"
                android:textSize="@dimen/ts_20"
                android:layout_marginTop="@dimen/ts_20"
                />
            <Button
                android:id="@+id/btn_clear_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/button_bg_shape"
                android:text="@string/lock_clear_code"
                android:textSize="@dimen/ts_20"
                android:layout_marginTop="@dimen/ts_20"
                />
            <Button
                android:id="@+id/btn_get_no_limit_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/button_bg_shape"
                android:text="@string/lock_get_no_limit_pwd"
                android:textSize="@dimen/ts_20"
                android:layout_marginTop="@dimen/ts_20"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>