<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/dp_30"
    tools:context=".videolock.LockFunctionActivity">

    <Button
        android:id="@+id/btn_video"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/button_bg_shape"
        android:text="@string/lock_video_funtion"
        android:textSize="@dimen/ts_20"

        />
    <Button
        android:id="@+id/btn_log"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/button_bg_shape"
        android:layout_marginTop="@dimen/ts_20"
        android:text="@string/lock_log_function"
        android:textSize="@dimen/ts_20"
        />
    <Button
        android:id="@+id/btn_temp_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/button_bg_shape"
        android:text="@string/lock_temp_password"
        android:textSize="@dimen/ts_20"
        android:layout_marginTop="@dimen/ts_20"
        />
    <Button
        android:id="@+id/btn_member"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/button_bg_shape"
        android:text="@string/lock_member_manage"
        android:textSize="@dimen/ts_20"
        android:layout_marginTop="@dimen/ts_20"
        />
    <Button
        android:id="@+id/btn_other"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/button_bg_shape"
        android:text="@string/lock_other_function"
        android:textSize="@dimen/ts_20"
        android:layout_marginTop="@dimen/ts_20"
        />

</LinearLayout>