<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/lock_remote_request_unlock"
        android:gravity="center"
        android:textSize="@dimen/ts_20"
        android:layout_marginTop="@dimen/dp_30"
        />
    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        >
        <com.tuya.smart.camera.middleware.widget.TuyaCameraView
            android:id="@+id/camera_video_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dp_300"
            />
        <com.tuya.drawee.view.DecryptImageView
            android:id="@+id/iv_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dp_300" />
        <Button
            android:id="@+id/btn_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/lock_play"
            android:gravity="center"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/btn_snapshot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lock_snapshot"
                android:padding="@dimen/dp_10"
                android:visibility="gone"
                />
            <Button
                android:id="@+id/btn_recorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lock_recorder"
                android:padding="@dimen/dp_10"
                android:visibility="gone"
                />
            <Button
                android:id="@+id/btn_talk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lock_video_talk"
                android:padding="@dimen/dp_10"
                android:visibility="gone"
                />
            <Button
                android:id="@+id/btn_mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lock_mute"
                android:padding="@dimen/dp_10"
                android:visibility="gone"
                />

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_realtime_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/btn_retake_photo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@color/green"
            android:text="@string/lock_retake_photo"
            />

        <Button
            android:id="@+id/btn_unlock"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/blue_30"
            android:text="@string/lock_unlock"
            android:layout_marginBottom="@dimen/dp_20"
            />
        <Button
            android:id="@+id/btn_refuse_unlock"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:gravity="center"
            android:background="@color/red"
            android:textColor="@color/white"
            android:text="@string/lock_refuse_unlock"
            android:layout_marginBottom="@dimen/dp_20"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_countdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <Button
            android:id="@+id/btn_force_anti_lock"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@color/green"
            android:text="@string/lock_force_anti_lock"
            />
        <TextView
            android:id="@+id/tv_ignore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/lock_ignore"
            android:textSize="@dimen/ts_20"
            android:layout_marginBottom="@dimen/dp_20"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>