<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".videolock.MemberManagementActivity">

    <Button
        android:id="@+id/btn_add_member"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/button_bg_shape"
        android:text="@string/lock_add_member"
        android:textSize="@dimen/ts_20"
        android:layout_marginTop="@dimen/ts_20"
        />
    <Button
        android:id="@+id/btn_update_member"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/button_bg_shape"
        android:text="@string/lock_update_member"
        android:textSize="@dimen/ts_20"
        android:layout_marginTop="@dimen/ts_20"
        />
    <Button
        android:id="@+id/btn_delete_member"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/button_bg_shape"
        android:text="@string/lock_delete_member"
        android:textSize="@dimen/ts_20"
        android:layout_marginTop="@dimen/ts_20"
        />
    <Button
        android:id="@+id/btn_member_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/button_bg_shape"
        android:text="@string/lock_member_list"
        android:textSize="@dimen/ts_20"
        android:layout_marginTop="@dimen/ts_20"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_member_list"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />
</LinearLayout>